--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           </ul>
         </nav>
         <a
-          href="#contact"
+          href="https://wa.me/8086094070?text=Hey,%20Can%20I%20get%20a%20demo%20of%20Rentrix,%20The%20rental%20expert"
           class="hidden md:block bg-white text-primary px-4 py-2 rounded font-semibold hover:bg-gray-300"
         >
           Request a Demo
@@ -84,7 +84,7 @@
           inventory, customer management, and more.
         </p>
         <a
-          href="#contact"
+          href="https://wa.me/8086094070?text=Hey,%20Can%20I%20get%20a%20demo%20of%20Rentrix,%20The%20rental%20expert"
           class="bg-primary text-white px-6 py-2 rounded hover:bg-gray-600"
         >
           Request a Demo
@@ -125,6 +125,7 @@
       </div>
     </section>
 
+
     <!-- Pricing Section -->
     <section id="pricing" class="bg-gray-100 py-20">
       <div class="container mx-auto px-6">
@@ -149,53 +150,57 @@
 
     <!-- Contact Section -->
     <section id="contact" class="py-20">
-      <div class="container mx-auto px-6">
-        <h2 class="text-center text-2xl font-bold mb-10">Request a Demo</h2>
-        <form class="max-w-md mx-auto space-y-4">
-          <input
-            type="text"
-            placeholder="Your Name"
-            required
-            class="w-full px-4 py-2 border rounded focus:outline-[#350e05]"
-          />
-          <input
-            type="email"
-            placeholder="Your Email"
-            required
-            class="w-full px-4 py-2 border rounded focus:outline-[#350e05]"
-          />
-          <textarea
-            placeholder="Your Message"
-            required
-            class="w-full px-4 py-2 border rounded focus:outline-[#350e05]"
-          ></textarea>
-          <button
-            type="submit"
-            class="w-full bg-[#350e05] text-white px-4 py-2 rounded hover:bg-gray-600"
+        <div class="container mx-auto px-6">
+          <h2 class="text-center text-2xl font-bold mb-10">Request a Demo</h2>
+          <form
+            action="https://wa.me/8086094070?text=Hey,%20Can%20I%20get%20a%20demo%20of%20Rentrix,%20The%20rental%20expert"
+            method="get"
+            class="max-w-md mx-auto space-y-4"
           >
-            Submit
-          </button>
-        </form>
-      </div>
-    </section>
-
-    <!-- Footer -->
-    <footer class="bg-primary text-white text-center py-4">
-      <p>&copy; 2024 Rentrix. All rights reserved.</p>
-    </footer>
-
-    <!-- Animation Script -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.1/aos.js"></script>
-    <script>
-      AOS.init();
-
-      // Toggle Mobile Menu
-      const menuBtn = document.getElementById("menu-btn");
-      const mobileMenu = document.getElementById("mobile-menu");
-
-      menuBtn.addEventListener("click", () => {
-        mobileMenu.classList.toggle("hidden");
-      });
-    </script>
-  </body>
-</html>
+            <input
+              type="text"
+              placeholder="Your Name"
+              required
+              class="w-full px-4 py-2 border rounded focus:outline-[#350e05]"
+            />
+            <input
+              type="email"
+              placeholder="Your Email"
+              required
+              class="w-full px-4 py-2 border rounded focus:outline-[#350e05]"
+            />
+            <textarea
+              placeholder="Your Message"
+              required
+              class="w-full px-4 py-2 border rounded focus:outline-[#350e05]"
+            ></textarea>
+            <button
+              type="submit"
+              class="w-full bg-[#350e05] text-white px-4 py-2 rounded hover:bg-gray-600"
+            >
+              Submit
+            </button>
+          </form>
+        </div>
+      </section>
+  
+      <!-- Footer -->
+      <footer class="bg-primary text-white text-center py-4">
+        <p>&copy; 2024 Rentrix. All rights reserved.</p>
+      </footer>
+  
+      <!-- Animation Script -->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.1/aos.js"></script>
+      <script>
+        AOS.init();
+  
+        // Toggle Mobile Menu
+        const menuBtn = document.getElementById("menu-btn");
+        const mobileMenu = document.getElementById("mobile-menu");
+  
+        menuBtn.addEventListener("click", () => {
+          mobileMenu.classList.toggle("hidden");
+        });
+      </script>
+    </body>
+  </html>
